Added some documentation, configured the surefire plugin and added JSON serialization